fix: scrollbar styles

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,13 +24,38 @@ dialog::backdrop {
   backdrop-filter: blur(2px);
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: rgba(219, 87, 67, 0.4);
+  border: 2px solid hsl(120 75% 50% / 1);;
   border-radius: 100vw;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(170, 158, 156, 0.627);
+  border-radius: 10px;
+} */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 1em;
+}
+
+::-webkit-scrollbar-track {
+  background: hsla(0, 7%, 94%, 1);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(219, 87, 67, 0.658);
+  border: 2px solid hsla(0, 7%, 94%, 1);
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsla(8, 68%, 56%, 1);
 }
 
 .swiper-pagination {
